# distributed-sgd

./: CMakeLists.txt  README.md
include/: dummy.h
src/: main.cpp
